# sqlite-mcp-rs

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  RELEASE.md  TODO.md  dist-workspace.toml
.github/workflows/: init-npm-placeholder.yml  integration.yml  model-integration.yml  publish-docker.yml  release.yml
.tmp/sqlite-mcp-inspector/inspector/: seed.db
docs/: tool-contract.md
npm/meta/: package.json
npm/meta/lib/: platform.js
scripts/: build_npm_packages.py  download-models.sh  package_release.py  run-sqlite-mcp-glibc-baseline.sh  test-npm-launcher.js  test-sqlite-mcp-inspector-http.sh  test-sqlite-mcp-inspector.sh  test_build_npm_packages.py  write_checksums.py
src/: config.rs  errors.rs  lib.rs  main.rs  policy.rs
src/adapters/: embeddings.rs  mod.rs  ort_runtime.rs  reranker.rs
src/contracts/: common.rs  db.rs  import.rs  mod.rs  queue.rs  schema.rs  sql.rs  vector.rs
src/db/: mod.rs  persistence.rs  registry.rs
src/pagination/: cursor_store.rs  mod.rs
src/server/: finalize.rs  mcp.rs  mod.rs
src/tools/: db.rs  import.rs  mod.rs  queue.rs  sql.rs  vector.rs
tests/fixtures/: sqlite-inspector-seed.sql
