[package]
name = "sqlite-mcp-rs"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "SQLite Machine (MCP) server with vector and embeddings support."
repository = "https://github.com/bradsjm/sqlite-mcp-rs"
readme = "README.md"
keywords = ["sqlite", "mcp", "embeddings", "vectors"]
categories = ["database"]

[features]
default = []
vector = ["dep:fastembed", "dep:sqlite-vec", "dep:reqwest", "dep:flate2", "dep:tar", "dep:zip"]

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.32", features = ["derive"] }
csv = "1.3.1"
rmcp = { version = "0.6.4", features = ["server", "transport-io", "transport-streamable-http-server", "macros", "schemars"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting", "macros"] }
tokio = { version = "1.44.1", features = ["macros", "net", "rt-multi-thread", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
fastembed = { version = "5.11.0", optional = true, default-features = false, features = ["hf-hub-rustls-tls", "ort-load-dynamic"] }
sqlite-vec = { version = "0.1.7-alpha.10", optional = true }
reqwest = { version = "0.12.23", optional = true, default-features = false, features = ["blocking", "rustls-tls"] }
flate2 = { version = "1.1.2", optional = true }
tar = { version = "0.4.44", optional = true }
zip = { version = "4.6.1", optional = true, default-features = false, features = ["deflate"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
