[package]
name = "sqlite-mcp-rs"
version = "0.3.3"
edition = "2024"
rust-version = "1.94"
license = "MIT"
description = "SQLite Machine (MCP) server with vector and embeddings support."
repository = "https://github.com/bradsjm/sqlite-mcp-rs"
readme = "README.md"
keywords = ["sqlite", "mcp", "embeddings", "vectors"]
categories = ["database"]

[features]
default = []
vector = ["dep:sqlite-vec"]
local-embeddings = ["vector", "dep:fastembed", "dep:reqwest", "dep:flate2", "dep:tar", "dep:zip"]

[dependencies]
axum = "0.8.8"
clap = { version = "4.6.0", features = ["derive"] }
csv = "1.4.0"
rmcp = { version = "1.3.0", features = ["server", "transport-io", "transport-streamable-http-server", "macros", "schemars"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "macros"] }
tokio = { version = "1.51.1", features = ["macros", "net", "rt-multi-thread", "sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
fastembed = { version = "5.13.1", optional = true, default-features = false, features = ["hf-hub-rustls-tls", "ort-load-dynamic"] }
sqlite-vec = { version = "0.1.9", optional = true }
reqwest = { version = "0.13.2", optional = true, default-features = false, features = ["blocking", "rustls"] }
flate2 = { version = "1.1.9", optional = true }
tar = { version = "0.4.45", optional = true }
zip = { version = "8.5.1", optional = true, default-features = false, features = ["deflate"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
